# AncientBook

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
docs/licenses/: THIRD_PARTY_NOTICES.md
docs/release-checklists/: github-release-v0.1.0.md  non-programmer-acceptance.md  windows-manual-check.md  windows-release-readme.txt
docs/superpowers/plans/: 2026-06-04-ancientbook-core-pdf-plan.md  2026-06-04-ancientbook-desktop-ui-plan.md  2026-06-04-ancientbook-next-ui-plan-notes.md  2026-06-04-ancientbook-packaging-plan-notes.md  2026-06-04-ancientbook-usability-enhancement-plan.md  2026-06-04-ancientbook-windows-packaging-plan.md  2026-06-07-ancientbook-book-desk-ui-plan.md
docs/superpowers/specs/: 2026-06-04-ancientbook-python-desktop-design.md  2026-06-04-ancientbook-usability-enhancement-design.md
examples/: sample.txt
packaging/: windows_desktop.py
scripts/: build_windows.ps1  package_windows_release.ps1
src/ancientbook/: app_service.py  cli.py  document_reader.py  layout.py  markup.py  model.py  output_naming.py  pdf.py  presets.py  settings.py  system_fonts.py  template.py  text_reader.py
src/ancientbook/desktop/: __init__.py  app.py  main_window.py  preview.py  ui_fonts.py  worker.py
tests/: test_app_service.py  test_cli.py  test_desktop_imports.py  test_desktop_preview.py  test_document_reader.py  test_layout.py  test_markup.py  test_output_naming.py  test_package.py  test_packaging_files.py  test_pdf_pipeline.py  test_presets.py  test_settings.py  test_system_fonts.py  test_template.py  test_text_reader.py
