[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ancientbook"
version = "0.1.0"
description = "Chinese ancient-book-style vertical PDF generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.4",
  "reportlab>=4.2",
  "pypdf>=4.2",
  "PySide6>=6.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
ancientbook = "ancientbook.cli:main"
ancientbook-desktop = "ancientbook.desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
